# AhaGo

./: README.md  meson.build
data/: com.github.aharotias2.AhaGo.desktop  com.github.aharotias2.AhaGo.resources.xml  com.github.aharotias2.BakamonGo.desktop
src/: aha-consts.vala  aha-go.vala  bakamon-consts.vala  bakamon-go.vala  bakamongo.vala
src/enum/: aha-go-status.vala  aha-go-tern.vala  aha-model-size.vala  bakamon-go-status.vala  bakamon-go-tern.vala  bakamon-model-size.vala  bakamongostatus.vala  bakamongotern.vala  bakamonmodelsize.vala
src/misc/: aha-label-builder.vala  bakamon-label-builder.vala  bakamonlabelbuilder.vala
src/model/: aha-go-model.vala  aha-history-item.vala  bakamon-go-model.vala  bakamon-history-item.vala  bakamongomodel.vala  bakamonhistoryitem.vala
src/widget/: aha-go-pows-widget.vala  aha-go-score-board.vala  aha-go-widget.vala  aha-mini-go-widget.vala  aha-stopwatch.vala  aha-tern-switcher.vala  aha-title-logo.vala  bakamon-go-score-board.vala  bakamon-go-widget.vala  bakamon-stopwatch.vala  bakamon-title-logo.vala  bakamongopowswidget.vala  bakamongoscoreboard.vala  bakamongowidget.vala  bakamonminigowidget.vala  bakamonstopwatch.vala  bakamonternswitcher.vala  bakamontitlelogo.vala
src/widgethelper/: aha-ball-drawer.vala  aha-dpoint.vala  bakamon-dpoint.vala  bakamonballdrawer.vala  bakamondpoint.vala
